--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,7 @@
 		"@react-navigation/native-stack": "6.11.0",
 		"react": "18.3.1",
 		"react-native": "0.75.3",
-		"react-native-ping-android": "1.0.0-rc.3",
+		"react-native-ping-android": "1.0.0",
 		"react-native-safe-area-context": "^4.11.0",
 		"react-native-screens": "^3.34.0"
 	},
