extend react/jsx-runtime for new JSX transform of React 17

--- a/package/.eslintrc.json
+++ b/package/.eslintrc.json
@@ -4,6 +4,8 @@
 	"extends": [
 		"@react-native",
 
+		"plugin:react/jsx-runtime",
+
 		"plugin:@typescript-eslint/recommended",
 
 		// Eslint Plugin Import
