--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -7,51 +7,51 @@ apply plugin: "com.facebook.react"
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
 react {
-	/* Folders */
-	//   The root of your project, i.e. where "package.json" lives. Default is '../..'
-	// root = file("../../")
-	//   The folder where the react-native NPM package is. Default is ../../node_modules/react-native
-	// reactNativeDir = file("../../node_modules/react-native")
-	//   The folder where the react-native Codegen package is. Default is ../../node_modules/@react-native/codegen
-	// codegenDir = file("../../node_modules/@react-native/codegen")
-	//   The cli.js file which is the React Native CLI entrypoint. Default is ../../node_modules/react-native/cli.js
-	// cliFile = file("../../node_modules/react-native/cli.js")
+    /* Folders */
+    //   The root of your project, i.e. where "package.json" lives. Default is '../..'
+    // root = file("../../")
+    //   The folder where the react-native NPM package is. Default is ../../node_modules/react-native
+    reactNativeDir = file("../../../node_modules/react-native")
+    //   The folder where the react-native Codegen package is. Default is ../../node_modules/@react-native/codegen
+    codegenDir = file("../../../node_modules/@react-native/codegen")
+    //   The cli.js file which is the React Native CLI entrypoint. Default is ../../node_modules/react-native/cli.js
+    cliFile = file("../../../node_modules/react-native/cli.js")
 
-	/* Variants */
-	//   The list of variants to that are debuggable. For those we're going to
-	//   skip the bundling of the JS bundle and the assets. By default is just 'debug'.
-	//   If you add flavors like lite, prod, etc. you'll have to list your debuggableVariants.
-	// debuggableVariants = ["liteDebug", "prodDebug"]
+    /* Variants */
+    //   The list of variants to that are debuggable. For those we're going to
+    //   skip the bundling of the JS bundle and the assets. By default is just 'debug'.
+    //   If you add flavors like lite, prod, etc. you'll have to list your debuggableVariants.
+    // debuggableVariants = ["liteDebug", "prodDebug"]
 
-	/* Bundling */
-	//   A list containing the node command and its flags. Default is just 'node'.
-	// nodeExecutableAndArgs = ["node"]
-	//
-	//   The command to run when bundling. By default is 'bundle'
-	// bundleCommand = "ram-bundle"
-	//
-	//   The path to the CLI configuration file. Default is empty.
-	// bundleConfig = file(../rn-cli.config.js)
-	//
-	//   The name of the generated asset file containing your JS bundle
-	// bundleAssetName = "MyApplication.android.bundle"
-	//
-	//   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
-	// entryFile = file("../js/MyApplication.android.js")
-	//
-	//   A list of extra flags to pass to the 'bundle' commands.
-	//   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
-	// extraPackagerArgs = []
+    /* Bundling */
+    //   A list containing the node command and its flags. Default is just 'node'.
+    // nodeExecutableAndArgs = ["node"]
+    //
+    //   The command to run when bundling. By default is 'bundle'
+    // bundleCommand = "ram-bundle"
+    //
+    //   The path to the CLI configuration file. Default is empty.
+    // bundleConfig = file(../rn-cli.config.js)
+    //
+    //   The name of the generated asset file containing your JS bundle
+    // bundleAssetName = "MyApplication.android.bundle"
+    //
+    //   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
+    // entryFile = file("../js/MyApplication.android.js")
+    //
+    //   A list of extra flags to pass to the 'bundle' commands.
+    //   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
+    // extraPackagerArgs = []
 
-	/* Hermes Commands */
-	//   The hermes compiler command to run. By default it is 'hermesc'
-	// hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
-	//
-	//   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
-	// hermesFlags = ["-O", "-output-source-map"]
+    /* Hermes Commands */
+    //   The hermes compiler command to run. By default it is 'hermesc'
+    // hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
+    //
+    //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
+    // hermesFlags = ["-O", "-output-source-map"]
 
-	/* Autolinking */
-	autolinkLibrariesWithApp()
+    /* Autolinking */
+    autolinkLibrariesWithApp()
 }
 
 /**
@@ -63,62 +63,57 @@ def enableProguardInReleaseBuilds = false
  * The preferred build flavor of JavaScriptCore (JSC)
  *
  * For example, to use the international variant, you can use:
- * `def jscFlavor = 'org.webkit:android-jsc-intl:+'`
+ * `def jscFlavor = io.github.react-native-community:jsc-android-intl:2026004.+`
  *
  * The international variant includes ICU i18n library and necessary data
  * allowing to use e.g. `Date.toLocaleString` and `String.localeCompare` that
  * give correct results when using with locales other than en-US. Note that
  * this variant is about 6MiB larger per architecture than default.
  */
-def jscFlavor = 'org.webkit:android-jsc:+'
+def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
 
 android {
-	ndkVersion rootProject.ext.ndkVersion
-	buildToolsVersion rootProject.ext.buildToolsVersion
-	compileSdk rootProject.ext.compileSdkVersion
+    ndkVersion rootProject.ext.ndkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdk rootProject.ext.compileSdkVersion
 
-	namespace "com.example"
-	defaultConfig {
-		applicationId "com.example"
-		minSdkVersion rootProject.ext.minSdkVersion
-		targetSdkVersion rootProject.ext.targetSdkVersion
-		versionCode 1
-		versionName "1.0"
-		externalNativeBuild {
-			cmake {
-				arguments "-DCMAKE_MAKE_PROGRAM=C:\\ninja\\ninja.exe", "-DCMAKE_OBJECT_PATH_MAX=1024"
-			}
-		}
-	}
-	signingConfigs {
-		debug {
-			storeFile file('debug.keystore')
-			storePassword 'android'
-			keyAlias 'androiddebugkey'
-			keyPassword 'android'
-		}
-	}
-	buildTypes {
-		debug {
-			signingConfig signingConfigs.debug
-		}
-		release {
-			// Caution! In production, you need to generate your own keystore file.
-			// see https://reactnative.dev/docs/signed-apk-android.
-			signingConfig signingConfigs.debug
-			minifyEnabled enableProguardInReleaseBuilds
-			proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-		}
-	}
+    namespace "com.example"
+    defaultConfig {
+        applicationId "com.example"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode 1
+        versionName "1.0"
+    }
+    signingConfigs {
+        debug {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
+        release {
+            // Caution! In production, you need to generate your own keystore file.
+            // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.debug
+            minifyEnabled enableProguardInReleaseBuilds
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+        }
+    }
 }
 
 dependencies {
-	// The version of react-native is set by the React Native Gradle Plugin
-	implementation("com.facebook.react:react-android")
+    // The version of react-native is set by the React Native Gradle Plugin
+    implementation("com.facebook.react:react-android")
 
-	if (hermesEnabled.toBoolean()) {
-		implementation("com.facebook.react:hermes-android")
-	} else {
-		implementation jscFlavor
-	}
+    if (hermesEnabled.toBoolean()) {
+        implementation("com.facebook.react:hermes-android")
+    } else {
+        implementation jscFlavor
+    }
 }
