--- a/example/package.json
+++ b/example/package.json
@@ -10,41 +10,33 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@react-navigation/native": "6.1.18",
-		"@react-navigation/native-stack": "6.11.0",
-		"react": "18.3.1",
-		"react-native": "0.75.4",
-		"react-native-ping-android": "1.2.0",
-		"react-native-safe-area-context": "^4.11.0",
-		"react-native-screens": "^3.34.0"
+		"@react-navigation/native": "7.0.15",
+		"@react-navigation/native-stack": "7.2.1",
+		"react": "19.0.0",
+		"react-native": "0.78.0",
+		"react-native-safe-area-context": "5.3.0",
+		"react-native-screens": "^4.9.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.20.0",
-		"@babel/plugin-transform-export-namespace-from": "^7.24.7",
-		"@babel/preset-env": "^7.20.0",
-		"@babel/runtime": "^7.20.0",
-		"@react-native/babel-preset": "0.75.4",
-		"@react-native/eslint-config": "0.75.4",
-		"@react-native/metro-config": "0.75.4",
-		"@react-native/typescript-config": "0.75.4",
-		"@stylistic/eslint-plugin": "^2.8.0",
-		"@types/react": "^18.2.6",
-		"@types/react-test-renderer": "^18.0.0",
-		"@typescript-eslint/eslint-plugin": "8.5.0",
-		"@typescript-eslint/parser": "8.5.0",
-		"babel-jest": "^29.6.3",
+		"@babel/core": "^7.25.2",
+		"@babel/preset-env": "^7.25.3",
+		"@babel/runtime": "^7.25.0",
+		"@react-native-community/cli": "15.0.1",
+		"@react-native-community/cli-platform-android": "15.0.1",
+		"@react-native-community/cli-platform-ios": "15.0.1",
+		"@react-native/babel-preset": "0.78.0",
+		"@react-native/metro-config": "0.78.0",
+		"@react-native/typescript-config": "0.78.0",
+		"@types/jest": "^29.5.13",
+		"@types/react": "^19.0.0",
+		"@types/react-test-renderer": "^19.0.0",
 		"babel-plugin-module-resolver": "^5.0.2",
-		"eslint": "8.57.0",
-		"eslint-import-resolver-typescript": "^3.6.3",
-		"eslint-plugin-import": "^2.30.0",
-		"eslint-plugin-jest": "^28.8.3",
 		"jest": "^29.6.3",
 		"prettier": "2.8.8",
-		"react-test-renderer": "18.3.1",
-		"typescript": "^5.6.2"
+		"react-test-renderer": "19.0.0",
+		"typescript": "5.8.2"
 	},
 	"engines": {
 		"node": ">=18"
-	},
-	"packageManager": "yarn@3.6.4"
+	}
 }
