--- a/package/package.json
+++ b/package/package.json
@@ -18,16 +18,7 @@
 		"registry": "https://registry.npmjs.org"
 	},
 	"scripts": {
-		"code-check": "npx tsc && npm run lint",
-		"lint": "eslint .",
-		"prepare": "bob build",
-		"prepack": "run-script-os",
-		"prepack:darwin:linux": "bash ../scripts/package-prepack/bash.sh",
-		"prepack:win32": "powershell -NoProfile -ExecutionPolicy Unrestricted -Command ../scripts/package-prepack/powershell.ps1",
-		"postpack": "run-script-os",
-		"postpack:darwin:linux": "bash ../scripts/package-postpack/bash.sh",
-		"postpack:win32": "powershell -NoProfile -ExecutionPolicy Unrestricted -Command ../scripts/package-postpack/powershell.ps1",
-		"release": "dotenv release-it"
+		"prepare": "bob build"
 	},
 	"source": "./src/index.ts",
 	"main": "./lib/commonjs/index.js",
@@ -72,27 +63,13 @@
 		}
 	},
 	"devDependencies": {
-		"@react-native/eslint-config": "0.75.4",
 		"@react-native/typescript-config": "0.75.4",
-		"@stylistic/eslint-plugin": "^2.8.0",
-		"@types/react": "^18.2.44",
-		"@typescript-eslint/eslint-plugin": "8.5.0",
-		"@typescript-eslint/parser": "8.5.0",
-		"dotenv-cli": "^7.4.2",
-		"eslint": "8.57.0",
-		"eslint-import-resolver-typescript": "^3.6.3",
-		"eslint-plugin-import": "^2.30.0",
-		"eslint-plugin-jest": "^28.8.3",
-		"react": ">=17",
-		"react-native": "^0.75.4",
-		"react-native-builder-bob": "^0.30.2",
-		"release-it": "^17.6.0",
-		"run-script-os": "^1.1.6",
-		"typescript": "^5.6.2"
+		"react-native-builder-bob": "0.35.2",
+		"typescript": "5.8.2"
 	},
 	"peerDependencies": {
-		"react": "*",
-		"react-native": "*"
+		"react": ">=17",
+		"react-native": ">=0.72"
 	},
 	"react-native-builder-bob": {
 		"source": "src",
@@ -117,25 +94,5 @@
 				}
 			]
 		]
-	},
-	"release-it": {
-		"git": {
-			"commitMessage": "chore: release ${version}",
-			"tagName": "v${version}"
-		},
-		"github": {
-			"release": true
-		},
-		"npm": {
-			"publish": true
-		},
-		"hooks": {
-			"before:init": "npm run code-check",
-			"before:git:release": "echo Pushing ${name} to Git...",
-			"after:git:release": "echo Successfully pushed ${name} to Git",
-			"before:github:release": "echo Making a Github release...",
-			"after:github:release": "echo Successfully created a Github release",
-			"after:release": "echo Successfully released ${name} v${version} to ${repo.repository}"
-		}
 	}
 }
