--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node_version: [22]
+        node-version: [22]
     steps:
     - uses: actions/checkout@v4
     - name: Install pnpm
