--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       run: npm run code-check
     - name: Release to npm registry
       run: |
-        pnpm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+        pnpm config set //registry.npmjs.org/:_authToken="$NODE_AUTH_TOKEN"
         npm run package-prepack
         pnpm publish --filter react-native-ping-android --access public --no-git-checks
       env:
