--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,9 @@ jobs:
       run: npm run code-check
     - name: Release to npm registry
       run: |
-        pnpm config set //registry.npmjs.org/:_authToken="$NODE_AUTH_TOKEN"
+        pnpm config set "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN"
         npm run package-prepack
+        pnpm config list
         pnpm publish --filter react-native-ping-android --access public --no-git-checks
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
