--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,13 @@ jobs:
       run: pnpm install --frozen-lockfile
     - name: Code check
       run: npm run code-check
+    # https://github.com/pnpm/pnpm/issues/4937
+    - name: Set up special NPM voodoo
+      run: |
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
     - name: Release to npm registry
       run: |
-        pnpm config set "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN"
         npm run package-prepack
-        pnpm config list
         pnpm publish --filter react-native-ping-android --access public --no-git-checks
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
