--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,9 +37,10 @@ jobs:
         echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
         echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> .npmrc
     - name: Release to npm registry
-      run: |
-        npm run package-prepack
-        pnpm publish --filter react-native-ping-android --access public --no-git-checks
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         NPM_CONFIG_PROVENANCE: true
+      if: ${{ secrets.NPM_TOKEN != '' }}
+      run: |
+        npm run package-prepack
+        pnpm publish --filter react-native-ping-android --access public --no-git-checks
