--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
     name: release package
     runs-on: ubuntu-22.04
     environment: RELEASE
+    permissions:
+      contents: read
+      id-token: write
     strategy:
       matrix:
         node-version: [22]
