--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,7 @@
 		"react": "19.0.0",
 		"react-native": "0.78.0",
 		"react-native-safe-area-context": "5.3.0",
-		"react-native-screens": "^4.9.2"
+		"react-native-screens": "4.10.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
