--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -4,6 +4,7 @@
 	"compilerOptions": {
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
+		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
